--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 </head> 
 <Body>
 
+
+
 <!--Search page-->
 <div data-role="page" id="search">
 
@@ -168,6 +170,8 @@
 
 </div> <!--/page-->
 
+
+
 <!--RESULTS PAGE -->
 <div data-role="page" id="resultpage">
 
@@ -191,10 +195,11 @@
 		</ul>
 	</div>
 	
-	
 	</div> <!--/footer-->
 </div> <!--/page-->
 
+
+<div data-role="dialog" id="dialog">.adasdasdada..</div>
 
 <!--My Timetable -->
 <div data-role="page" id="MyTimetable">
@@ -337,7 +342,6 @@
 	</div>
 </div> <!--/footer-->
 </div> <!--/page-->
-
 
 </Body>
 </html>
